--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="right-column">
             <div class="contenu">
                 <h1 class="PriseLicence">PRENDRE SA LICENCE</h1>
-                <img src="logo/qrcode.png" class="qrcode">
+                <a href="https://intranet.ffvl.fr/ffvl_licenceonline#fin" target="_blank"><img src="logo/qrcode.png" class="qrcode"></a>
                 <p class="list">SELECTIONNER LE CLUB DUCK (N°03011).</p>
             </div>
         </div>
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <div class="footer-right">
-            <a href="https://emea01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fdiscord.gg%2Fp8RY73bt8y&data=05%7C02%7C%7C88c7ad73e0a64f86770e08dc3a3a8d83%7C84df9e7fe9f640afb435aaaaaaaaaaaa%7C1%7C0%7C638449270351383854%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C0%7C%7C%7C&sdata=Zvmzn2yknFFY9BJPQvl3SoluEv2tdtvxXvRT2IhdWOg%3D&reserved=0" target="_blank" >
+            <a href="https://discord.gg/2FqtCNCvdY" target="_blank" >
                 <img src="logo/discord.png" alt="Discord">
             </a>
             <a href="https://www.facebook.com/groups/gucparapente/" target="_blank">
